--- a/index.html
+++ b/index.html
@@ -4,18 +4,42 @@
     <meta charset="UTF-8">
     <title>jogo da forca</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div id="forca">
-        <section class="Title">
-            <h1> Forca do Emanu </h1>
-        </section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="title">Forca do Bock</h2>
+            </div>
+        </div>
+        <hr>
+        <div id="step1" class="row">
+            <div class="col-md-6">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <input id="word" type="text" class="form-control" placeholder="Digite a palavra aqui">
+                        <input id="hint" type="text" class="form-control" placeholder="Digite a dica aqui">
+                        <button id="btn" class="btn">Começar <i class="glyphicon glyphicon-flash"></i> </button>
+                    </div>
+                </form>
+            </div>
+        </div>
 
-        <form action="">
-            <input id="word" type="text" placeholder="Digite a palavra aqui">
-            <input id="hint" type="text" placeholder="Digite a dica aqui">
-            <button id="btn">Clica Logo</button>
-        </form>
+        <div id="step2" class="row hide">
+            <div class="col-md-12">
+                <hr>
+                <div id="step2content"></div>
+                    <div class="col-md-6">
+                        <div id="letters"></div>
+                    </div>
+                    <div class="col-md-6">
+                        <div id="tip"></div>
+                    </div>
+                    
+                </div>
+        </div>
+
 
     </div>
     <script src="scripts/script.js"></script>
